# django-easy-notify

./: .isort.cfg  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  db.sqlite3  docker-compose.yml  dump.rdb  pytest.ini  requirements.txt  setup.cfg  setup.py
.github/workflows/: publish_pypi.yml  tests.yml
django_app_notifications.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
django_notifications/: asgi.py  settings.py  test_settings.py  urls.py
notifications/: admin.py  consumers.py  factories.py  models.py  routing.py  urls.py  utils.py
notifications/migrations/: 0001_initial.py  0002_alter_notification_notification_status_update.py  0003_alter_category_options_alter_category_icon.py
notifications/templates/: base.html
tests/notifications.py/: test_notifications.py
