[metadata]
name = django-app-notifications
version = 1.3
description = A Django Library to send notifications
readme = "README.md"
long_description = file: README.md
long_description_content_type = text/markdown
url = https://www.example.com/
author = Harsh
author_email = harsh@hashtrust.in
license = MIT License
classifiers =
	Environment :: Web Environment
	Framework :: Django :: 4.1
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
	Topic :: Communications :: Chat

[options]
include_package_data = true
packages = find:
python_requires = >=3.9
install_requires =
	Django
	channels
	channels-redis
	django-channels

[egg_info]
tag_build =
tag_date = 0

[flake8]
max-line-length = 120
max-complexity = 12
exclude = .git,docs,build,dist,test,*__init__.py,settings.py
ignore = E501, W503, E203, T001, SIM115

[tool:isort]
line_length=88
multi_line_output=3
include_trailing_comma=True
known_third_party=ckeditor,django,html2text,jinja2,pytest,setuptools
