[options]
include_package_data = true
packages = find:
python_requires = >=3.9
install_requires =
	Django
	channels
	daphne
	channels-redis

[egg_info]
tag_build =
tag_date = 0

[flake8]
max-line-length = 120
max-complexity = 12
exclude = .git,docs,build,dist,test,*__init__.py,settings.py
ignore = E501, W503, E203, T001, SIM115

[tool:isort]
line_length=88
multi_line_output=3
include_trailing_comma=True
known_third_party=ckeditor,django,html2text,jinja2,pytest,setuptools
